# eiwallet

./: Cargo.toml  README.md
crypto/: Cargo.toml
crypto/src/: lib.rs
gui/: Cargo.toml
gui/src/: app.rs  main.rs
layer_1/: Cargo.toml
layer_1/src/: lib.rs
layer_2/: Cargo.toml
model/: Cargo.toml
model/src/: lib.rs
