[package]
name = "gui"
version = "0.1.0"
authors = ["Ioan Stănilă <ioanstanilais@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
layer_1 = { path = "../layer_1" }
model = { path = "../model" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
